list contacts page mockup finished in 17 minutes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,14 @@
+:root {
+  --nat-navbar-bg: #3b9cec;
+  --nat-navbar-bg-rgb: 236, 236, 236;
+  --nat-navbar-text-color: black;
+  --nat-navbar-highlight-text: #3b9cec;
+}
+footer, 
+footer a {
+  color: var(--nat-navbar-text-color);
+}
+
 html,
 body {
   --bs-light-rgb: 236, 236, 236;
@@ -5,10 +16,38 @@ body {
   height: 100%;
   padding: 0;
   margin: 0;
+  background: fixed center url("/background.jpg");
 }
+
+body .navbar {
+  --bs-navbar-active-color: var(--nat-navbar-highlight-text);
+  --bs-navbar-brand-color: var(--nat-navbar-text-color);
+  --bs-navbar-brand-hover-color: var(--nat-navbar-highlight-text);
+  --bs-navbar-color: var(--nat-navbar-text-color);
+  --bs-navbar-hover-color: var(--nat-navbar-highlight-text);
+}
+
+.bg-dark a.dropdown-item {
+  color: var(--nat-navbar-bg);
+}
+
 .wrapper {
   box-sizing: border-box;
   min-height: 100%;
   display: flex;
   flex-direction: column;
+}
+
+.navbar-blur {
+  background-color: rgba(255,255,255,0.7);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.footer-blur {
+  background-color: rgba(255,255,255,0.7);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
